--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title>platform</title>
+  <title>this is the new title</title>
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
