--- a/client/outer.html
+++ b/client/outer.html
@@ -1,4 +1,21 @@
 <template name="outer">
+  <div id="wrapper">
+    <div id="sidebar-wrapper">
+      <ul class="sidebar-nav">
+        <li class="sidebar-brand">Platform</li>
+        <li><a href="" id="recordsLink">Records and Files</a></li>
+          <li><a href="" id="uploadLink">Upload Documents</a></li>
+          <li>Records and Files</li>
+          <li>Profile</li>
+        <li>Settings</li>
+        <li>Requests</li>
+      </ul>
+    </div>
+    <div id="page-content-wrapper">
+      <a href="#menu-toggle" id="menu-toggle"><i class="fa fa-bars"></i></a>
+      <div class="userId">
+      {{> loginButtons align="right"}}
+    </div>
 	<div class="row">
     <div class="col-xs-3">
       <img id="logo" src="./images/logo.png">
@@ -12,7 +29,7 @@
     </div>
   </div>
   <div class="row">
-  	<div class="col-xs-3">
+  	<div class="col-sm-3 col-xs-0">
   		<div class="left-nav">
   			<ul class="list-unstyled">
   				<li><h4><a href="/records">Records and Files</a></h4></li>
@@ -21,8 +38,12 @@
   			</ul>
   		</div>
   	</div>
-  	<div class="col-xs-9">
+    <section id="main-content">
+  	<div class="col-sm-9 col-xs-12">
   		{{> yield}}
   	</div>
+  </section>
   </div>
+</div>
+</div>
 </template>
