--- a/client/records/records.html
+++ b/client/records/records.html
@@ -5,21 +5,21 @@
 			<thead>
 				<tr>
 					<th>Record Name</th>
-					<th>Description</th>
-					<th>Uploaded By</th>
-					<th>Date of Record</th>
-					<th>File</th>
+					<th class="hidden-xs">Description</th>
+					<th class="hidden-xs">Uploaded By</th>
+					<th class="hidden-xs">Date of Record</th>
+					<th class="hidden-xs">File</th>
 				</tr>
 			</thead>
 
 			<tbody>
 				{{#each records}}
 		  		<tr>
-		  			<td>{{name}}</td>
-		  			<td>{{description}}</td>
-		  			<td>{{username}}</td>
-		  			<td>{{dateOfRecord}}</td>
-		  			<td>{{file.original.name}}</td>
+		  			<td><a href="{{fileUrl}}" target="_blank">{{name}}</a></td>
+		  			<td class="hidden-xs">{{description}}</td>
+		  			<td class="hidden-xs">{{username}}</td>
+		  			<td class="hidden-xs">{{dateOfRecord}}</td>
+		  			<td class="hidden-xs">{{file.original.name}}</td>
 		  		</tr>
 		  		{{/each}}
 			</tbody>
