File url working

--- a/client/outer.html
+++ b/client/outer.html
@@ -6,8 +6,8 @@
           <ul class="sidebar-nav">
             <li class="sidebar-brand">Platform</li>
             <li><a href="" id="recordsLink">Records and Files</a></li>
-              <li><a href="" id="uploadLink">Upload Documents</a></li>
-              <li>Records and Files</li>
+              <li><a href="" id="uploadLink">Upload File</a></li>
+              <li>Request File</li>
               <li>Profile</li>
             <li>Settings</li>
             <li>Requests</li>
@@ -64,6 +64,8 @@
         </div>
  -->
   <!-- {{/if}} -->
+
+  
 
 
 
