--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>Platform - Digitalize Your Health</title>
+  <link rel="shortcut icon" type="image/png" href="./images/favicon.png">
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
